--- a/unowned/unowned/Base.lproj/Main.storyboard
+++ b/unowned/unowned/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                             <constraint firstAttribute="bottom" secondItem="Raj-mB-00Z" secondAttribute="bottom" id="z1F-xO-Ghc"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Помочь" id="oui-vL-pNM">
+                    <navigationItem key="navigationItem" title="Помочь" largeTitleDisplayMode="always" id="oui-vL-pNM">
                         <barButtonItem key="leftBarButtonItem" image="arrowBack" id="iZB-bY-joT">
                             <connections>
                                 <action selector="closeApp:" destination="BYZ-38-t0r" id="j6Y-IJ-ih7"/>
@@ -79,16 +79,22 @@
         <!--Помочь-->
         <scene sceneID="H8X-o4-hxj">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jSB-bj-UZ8" sceneMemberID="viewController">
+                <navigationController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="jSB-bj-UZ8" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <tabBarItem key="tabBarItem" tag="2" title="Помочь" image="icon-green-heart" id="Rgu-3e-0mx">
                         <inset key="imageInsets" minX="0.0" minY="-20" maxX="0.0" maxY="0.0"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XtZ-uL-P2H">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XtZ-uL-P2H">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PZ6-1l-0Fr">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6x2-LD-SXb"/>
                     </connections>
@@ -164,14 +170,17 @@
         <!--Tab Bar Controller-->
         <scene sceneID="W5A-uy-qiU">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ybm-NV-qKq" sceneMemberID="viewController">
+                <tabBarController autoresizesArchivedViewToFullSize="NO" wantsFullScreenLayout="YES" extendedLayoutIncludesOpaqueBars="YES" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="flipHorizontal" id="Ybm-NV-qKq" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Fh-Bf-1Fx">
+                    <tabBar key="tabBar" autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6Fh-Bf-1Fx">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" name="leaf"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" name="leaf"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </tabBarAppearance>
                     </tabBar>
                     <connections>
                         <segue destination="Hte-CY-m2W" kind="relationship" relationship="viewControllers" id="11J-IW-EjU"/>
